Config Detekt & Jacoco