@@ -3,6 +3,9 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
+apply from: "$rootProject.projectDir/scripts/detekt.gradle"
+apply from: "$rootProject.projectDir/scripts/jacoco.gradle"
+
 android {
     def config = rootProject.extensions.getByName("ext")
 
@@ -18,6 +21,10 @@ android {
         testInstrumentationRunner config["test_runner"]
     }
 
+    testOptions.unitTests.all {
+        jvmArgs "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap"
+    }
+
     lintOptions {
         quiet true
         abortOnError false
@@ -31,8 +38,15 @@ android {
 
     buildTypes {
         release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            testCoverageEnabled = false
+        }
+
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            testCoverageEnabled = true
         }
     }
 
@@ -61,7 +75,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Compile time dependencies
-    kapt annotationProcessors.roomCompiler
     kapt annotationProcessors.daggerCompiler
     kapt annotationProcessors.moshi
 
